--- a/money/index.html
+++ b/money/index.html
@@ -115,7 +115,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="./money/jquery.min-3.2.1.js"></script>
 		<script src="money/pull.js"></script>
 	</body>
 </html>
