--- a/money/index.html
+++ b/money/index.html
@@ -21,23 +21,27 @@
 		<div class="pa_header">
 
 			<div class="header">
+				<a class="header-logo-xrdk"></a>
 				<ul class="yib">
 					<li class="moe1" style="border-right: 1px solid #FFFFFF">关于我们</li>
-					<li class="moe2" style="border-right: 1px solid #FFFFFF">借贷</li>
+					<li class="moe2" style="border-right: 1px solid #FFFFFF">
+						借贷
+						<div class="xiah">
+							<div class="wuio">
+								<div class="yian">
+									<p>车贷</p>
+									<div class="paso">所需资料</div>
+								</div>
+								<div class="erb">
+									<p>高贷</p>
+									<div class="paso">所需资料</div>
+								</div>
+							</div>
+						</div>
+					</li>
 					<li class="moe1">联系我们</li>
 				</ul>
-					<div class="xiah">
-						<div class="wuio">
-						<div class="yian">
-							<p>车贷</p>
-							<div class="paso">所需资料</div>
-						</div>
-						<div class="erb">
-							<p>房贷</p>
-							<div class="paso">所需资料</div>
-						</div>
-					</div>
-				</div>
+
 			</div>
 		</div>
 		<!-- 顶部 -->
@@ -47,9 +51,7 @@
 				<div class="banner-img">
 					<div class="banner-con">
 						<div class="form-box">
-							<div class="form-title">
-								23~55周岁均可申请
-							</div>
+
 							<div class="form-name clear">
 								<input class="input-text fz-16" type="text" value="" id="userName" name="name" maxlength="20" placeholder="请输入您的姓名">
 							</div>
@@ -101,7 +103,7 @@
 				<div class="footer">
 					<a href="#" target="_blank" class="footer_logo"></a>
 					<div class="copyright">
-						<span>公司名称</span>
+						<span></span>
 						<br>
 						<a href="#" target="_blank" title="隐私政策" otype="button" otitle="隐私政策">隐私政策</a>
 						<a href="#" target="_blank" title="使用说明" otype="button" otitle="使用说明">使用说明</a>
@@ -113,7 +115,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="./money/jquery.min-3.2.1.js"></script>
 		<script src="money/pull.js"></script>
 	</body>
 </html>
