--- a/money/index.html
+++ b/money/index.html
@@ -30,11 +30,13 @@
 							<div class="wuio">
 								<div class="yian">
 									<p>车贷</p>
-									<div class="paso">所需资料</div>
+									<div class="paso" style="border-radius:0 0 0 14px;">
+                                        所需资料
+                                    </div>
 								</div>
 								<div class="erb">
 									<p>高贷</p>
-									<div class="paso">所需资料</div>
+									<div class="paso" style="border-radius:0 0 14px 0 ;">所需资料</div>
 								</div>
 							</div>
 						</div>
@@ -50,20 +52,7 @@
 			<div class="banner-bg">
 				<div class="banner-img">
 					<div class="banner-con">
-						<div class="form-box">
 
-							<div class="form-name clear">
-								<input class="input-text fz-16" type="text" value="" id="userName" name="name" maxlength="20" placeholder="请输入您的姓名">
-							</div>
-							<div class="form-phone clear">
-								<input class="input-text fz-16" type="text" placeholder="请输入您的手机号码" id="phoneNum" name="mobile" maxlength="11" >
-							</div>
-							<div class="cl" style="display:none;width: 342px;height: 38px;margin:0 auto 10px;" id="judgCode">
-					            <div class="item-left-code fl" style="width: 50%;height: 38px;"><input class="input-text" id="imgCode" maxlength="4" type="text" placeholder="请输入验证码" style="width:80%;height:100%;border:1px solid #ccc;"></div>
-					            <div class="item-left-data fr" style="width: 34%;height: 100%;margin-top: -1px;">人人车<img style="width:100%;height: 100%;" id="pigCode" src=""></div>
-					        </div>
-							<a href="javascript:;" class="form-btn" id="btnNext0">立即申请</a>
-						</div>
 					</div>
 				</div>
 			</div>
