--- a/money/index.html
+++ b/money/index.html
@@ -30,13 +30,13 @@
 							<div class="wuio">
 								<div class="yian">
 									<p>车贷</p>
-									<div class="paso" style="border-radius:0 0 0 14px;">
-                                        所需资料
-                                    </div>
+									<!--<div class="paso" style="border-radius:0 0 0 14px;">-->
+                                        <!--所需资料-->
+                                    <!--</div>-->
 								</div>
 								<div class="erb">
 									<p>高贷</p>
-									<div class="paso" style="border-radius:0 0 14px 0 ;">所需资料</div>
+									<!--<div class="paso" style="border-radius:0 0 14px 0 ;">所需资料</div>-->
 								</div>
 							</div>
 						</div>
