--- a/money/index.html
+++ b/money/index.html
@@ -69,14 +69,34 @@
 
 				<dl class="pic-box pic-box2">
 					<dt class="pic-title">产品特点</dt>
-					<dd class="pic-con">
-						<img src="./money/pic2.png" alt="产品特点">
+					<dd class="kash">
+						<!--<img src="./money/pic2.png" alt="产品特点">-->
+						<div class="bis">
+							<span class="top-fiw">快</span>
+							<p style="margin-top: 30px;font-size: 22px">最快<span style="font-size: 28px">3</span>分钟放款</p>
+							<p style="font-size: 22px;margin-top: 10px"><span style="font-size: 28px">10</span>秒在线申请</p>
+						</div>
+						<div class="bis-1">
+							<span class="top-fiw">便</span>
+							<p style="margin-top: 30px;font-size: 22px">官方借款热线</p>
+							<p style="margin-top: 10px;font-size: 22px"><span style="font-size: 28px">400</span>客服</p>
+						</div>
+						<div class="bis-2">
+							<span class="top-fiw">高</span>
+							<p style="margin-top: 30px;font-size: 22px">最高可贷<span style="font-size: 28px">3</span>万</p>
+							<p style="margin-top: 10px;font-size: 22px">无需抵押</p>
+						</div>
+						<div class="bis-3">
+							<span class="top-fiw">简</span>
+							<p style="margin-top: 30px;font-size: 22px">材料简单</p>
+							<p style="margin-top: 10px;font-size: 22px">无需提供纸质材料</p>
+						</div>
 					</dd>
 				</dl>
 
 				<dl class="pic-box pic-box3">
 					<dt class="pic-title">申请流程</dt>
-					<dd class="pic-con">
+					<dd class="pic-con " >
 						<img src="./money/pic3.png" alt="申请流程">
 					</dd>
 				</dl>
@@ -92,13 +112,17 @@
 				<div class="footer">
 					<a href="#" target="_blank" class="footer_logo"></a>
 					<div class="copyright">
-						<span></span>
+						<span>版权所有©佛山市春堡有限公司 未经许可不得复制、转载或摘编，违者必究！</span>
+						<br>
+						Copyright©FOSHAN CITY SPRING FORT LIMITED COMPANY OF CHINA,LTD.All Rights Reserved
 						<br>
 						<a href="#" target="_blank" title="隐私政策" otype="button" otitle="隐私政策">隐私政策</a>
 						<a href="#" target="_blank" title="使用说明" otype="button" otitle="使用说明">使用说明</a>
 						<a href="#" target="_blank" title="用户体验计划" otype="button" otitle="用户体验计划">用户体验计划</a>
 
-						<div class="spbottom"><i class="dossier1"></i><i class="dossier2"></i><span>ICP许可证号 粤ICP备06118290号</span>
+						<div class="spbottom">
+							<!--<i class="dossier1"></i><i class="dossier2"></i>-->
+							<span>ICP许可证号 粤ICP备0000321号</span>
 						</div>
 					</div>
 				</div>
