--- a/money/index.html
+++ b/money/index.html
@@ -58,12 +58,29 @@
 			</div>
 			<!-- banner form -->
 
-			<div class="page-main">
+			<div class="page-main" >
 
 				<dl class="pic-box pic-box1">
-					<dt class="pic-title">借款产品</dt>
-					<dd class="pic-con">
-						<img src="./money/pic1.png" alt="借款产品">
+					<dt class="pic-title">热门产品</dt>
+					<dd class="pic-con1">
+						<!--<img src="./money/pic1.png" alt="借款产品">-->
+						<div class="rm" >
+							<div class="rm_cd rm_tp" style="margin-right: 14px">
+								<p class="anbi"><span>有车险</span>即可申请</p>
+								<p class="anbi-bay">不押车 不押证</p>
+								<div class="ddi">车险<br>贷</div>
+							</div>
+							<div class="rm_cd rm_tp1" style="margin-right: 14px">
+								<p class="anbi"><span>有房</span>即可申请</p>
+								<p class="anbi-bao">无需抵押 极速放款</p>
+								<div class="ddi">车房<br>贷</div>
+							</div>
+							<div class="rm_cd rm_tp2">
+								<p class="anbi"><span>有寿险</span>即可申请</p>
+								<p class="anbi-bos">支持所有保险公司的寿险保单</p>
+								<div class="ddi">寿险<br>贷</div>
+							</div>
+						</div>
 					</dd>
 				</dl>
 
@@ -83,7 +100,7 @@
 						</div>
 						<div class="bis-2">
 							<span class="top-fiw">高</span>
-							<p style="margin-top: 30px;font-size: 22px">最高可贷<span style="font-size: 28px">3</span>万</p>
+							<p style="margin-top: 30px;font-size: 22px">最高可贷<span style="font-size: 28px">30</span>万</p>
 							<p style="margin-top: 10px;font-size: 22px">无需抵押</p>
 						</div>
 						<div class="bis-3">
@@ -95,7 +112,7 @@
 				</dl>
 
 				<dl class="pic-box pic-box3">
-					<dt class="pic-title">申请流程</dt>
+					<dt class="pic-title">超简流程</dt>
 					<dd class="pic-con " >
 						<img src="./money/pic3.png" alt="申请流程">
 					</dd>
@@ -107,7 +124,13 @@
 
 		<!-- 底部 -->
 		<div class="pa-foot-box">
-			<div class="pa-foot-ad"></div>
+			<div class="pa-foot-ad">
+				<div class="tisa">
+					<p class="xian" ></p>
+					<p class="pasdd">佛山市春堡有限公司承诺：未成功放款，绝不收取任何费用</p>
+					<p class="xian"></p>
+				</div>
+			</div>
 			<div class="pa_footer">
 				<div class="footer">
 					<a href="#" target="_blank" class="footer_logo"></a>
