--- a/money/index.html
+++ b/money/index.html
@@ -23,7 +23,7 @@
 			<div class="header">
 				<a class="header-logo-xrdk"></a>
 				<ul class="yib">
-					<li class="moe1" style="border-right: 1px solid #FFFFFF">关于我们</li>
+					<li class="moe1" style="border-right: 1px solid #FFFFFF"> <a href="introduce.html">关于我们</a> </li>
 					<li class="moe2" style="border-right: 1px solid #FFFFFF">
 						借贷
 						<div class="xiah">
