--- a/money/LinkageMenu/index.html
+++ b/money/LinkageMenu/index.html
@@ -28,12 +28,12 @@
                 <div v-for="ite in item.list">
                   <div class="item">
                     <div class="item-left">
-                      <div class="item-img"> <img src="{{ite.src}}"> </div>
+                      <div class="item-img"> <img :src="ite.src"> </div>
                     </div>
                     <div class="item-right">
-                      <div class="title">{{ite.title}}</div>
-                      <div class="subtitle">  </div>
-                      <div class="price"></div>
+                      <div class="item-left">
+                        <div class="item-img"> <img :src="ite.title1"> </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -113,14 +113,14 @@
     el: '#right',
     data: {
       items: [
-        { class : '分类1',list : [ { title : '123',src:'https://pleasantly.github.io/pinan/tearful.jpg' },{ title : '456',src:'https://pleasantly.github.io/pinan/tearful.jpg' }] },
-        { class : '分类2',list : [ { title : '1' },{ title : '2' } ] },
-        { class : '分类3',list : [ { title : '1' },{ title : '2' } ] },
-        { class : '分类4',list : [ { title : '1' },{ title : '2' } ] },
-        { class : '分类5',list : [ { title : '1' },{ title : '2' } ] },
-        { class : '分类6',list : [ { title : '1' },{ title : '2' } ] },
-        { class : '分类7',list : [ { title : '1' },{ title : '2' } ] },
-        { class : '分类8',list : [ { title : '1' },{ title : '2' } ] }
+        { class : '分类1',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类2',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类3',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类4',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类5',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类6',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类7',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
+        { class : '分类8',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926' }]}
       ]
     }
   });
