--- a/money/LinkageMenu/index.html
+++ b/money/LinkageMenu/index.html
@@ -8,10 +8,17 @@
   <head>
 <body>
   <div class="swiper-container">
-<input placeholder="renenn">
+
     <ul class="swiper-container-ul">
-      <li class="swiper-container-ul-li actives">商品</li>
-      <li class="swiper-container-ul-li">店铺</li>
+      <!--<li class="swiper-container-ul-li actives">商品</li>-->
+      <!--<li class="swiper-container-ul-li">店铺</li>333-->
+      <div class="soi">
+        <div class="soo">
+          <div class="sos-img"> <img src="img/lowb.png"> </div>
+          <input placeholder="搜索" class="sos">
+        </div>
+      </div>
+
     </ul>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
@@ -36,13 +43,14 @@
                       </div>
                     </div>
                   </div>
+
                 </div>
               </li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="swiper-slide" style="display:none;">
+      <div class="swiper-slide1" style="display:none;">
         店铺介绍
       </div>
     </div>
@@ -91,6 +99,14 @@
         $('.swiper-container-ul-li').eq(1).addClass('actives');
       }
     });
+    // $('.sos').focus(function () {
+    //     $('.swiper-slide1').show();
+    //     $('.swiper-slide').hide();
+    // });
+    // $('.sos').blur(function () {
+    //     $('.swiper-slide1').hide();
+    //     $('.swiper-slide').show();
+    // })
   });
   </script>
   <script>
@@ -113,14 +129,14 @@
     el: '#right',
     data: {
       items: [
-        { class : '分类1',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类2',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类3',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类4',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类5',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类6',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类7',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926cffc1e171610.jpg' }] },
-        { class : '分类8',list : [ { title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1525944931974&di=e93a9c1ade23f6228a6ab2c19f0da7ce&imgtype=0&src=http%3A%2F%2Fg.hiphotos.bcffc1e171610.jpgaidu.com%2Fimage%2Fpic%2Fitem%2F78310a55b319ebc4092170d98926' }]}
+        { class : '分类1',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类2',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类3',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类4',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类5',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类6',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类7',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }] },
+        { class : '分类8',list : [ { title1:'http://pleasantly.github.io/pinan/qiqi.jpg',src:'http://pleasantly.github.io/pinan/tearful.jpg' },{ src:'http://pleasantly.github.io/pinan/tearful.jpg',title1:'http://pleasantly.github.io/pinan/qiqi.jpg' }]}
       ]
     }
   });
