--- a/money/index.html
+++ b/money/index.html
@@ -153,5 +153,14 @@
 		</div>
 		<script src="./money/jquery.min-3.2.1.js"></script>
 		<script src="money/pull.js"></script>
+	<script>
+
+        function randomsort(a, b) {
+            return Math.random()>.5 ? -1 : 1;
+        }
+        var arr = [1, 2, 3, 4, 5];
+        var arr2 = arr.sort(randomsort);
+        console.log(arr2);
+	</script>
 	</body>
 </html>
